       Canon PIXMA MG3210  (EXPERIMENTAL)(*2)
       Canon PIXMA MG3220  (EXPERIMENTAL)(*2)
       Canon PIXMA MG3222  (EXPERIMENTAL)(*2)
       Canon PIXUS MG3230  (EXPERIMENTAL)(*2)
       Canon PIXMA MG3240  (EXPERIMENTAL)(*2)
       Canon PIXMA MG3250  (EXPERIMENTAL)(*2)
       Canon PIXMA MG3260  (EXPERIMENTAL)(*2)
       Canon PIXMA MG3270  (EXPERIMENTAL)(*2)

       Canon MG4100 series (EXPERIMENTAL)(*1)
       Canon PIXMA MG4110  (EXPERIMENTAL)(*2)
       Canon PIXMA MG4120  (EXPERIMENTAL)(*2)
       Canon PIXUS MG4130  (EXPERIMENTAL)(*2)
       Canon PIXMA MG4140  (EXPERIMENTAL)(*2)
       Canon PIXMA MG4150  (EXPERIMENTAL)(*2)
       Canon PIXMA MG4160  (EXPERIMENTAL)(*2)
       Canon PIXMA MG4170  (EXPERIMENTAL)(*2)
       Canon PIXMA MG4180  (EXPERIMENTAL)(*2)

       Canon MG4200 series (EXPERIMENTAL)
       Canon PIXMA MG4210  (EXPERIMENTAL)(*2)
       Canon PIXMA MG4220  (EXPERIMENTAL)(*2)
       Canon PIXUS MG4230  (EXPERIMENTAL)(*2)
       Canon PIXMA MG4240  (EXPERIMENTAL)(*2)
       Canon PIXMA MG4250  (EXPERIMENTAL)(*2)
       Canon PIXMA MG4260  (EXPERIMENTAL)(*2)
       Canon PIXMA MG4270  (EXPERIMENTAL)(*2)
       Canon PIXMA MG4280  (EXPERIMENTAL)(*2)

       Canon MG5100 series (EXPERIMENTAL)(*1)
       Canon PIXMA MG5120  (EXPERIMENTAL)(*2)
       Canon PIXUS MG5130  (EXPERIMENTAL)(*2)
       Canon PIXMA MG5140  (EXPERIMENTAL)(*2)
       Canon PIXMA MG5150  (EXPERIMENTAL)(*2)
       Canon PIXMA MG5170  (EXPERIMENTAL)(*2)
       Canon PIXMA MG5180  (EXPERIMENTAL)(*2)

       Canon MG5200 series (EXPERIMENTAL)(*1)
       Canon PIXMA MG5210  (EXPERIMENTAL)(*2)
       Canon PIXMA MG5220  (EXPERIMENTAL)(*2)
       Canon PIXUS MG5230  (EXPERIMENTAL)(*2)
       Canon PIXMA MG5240  (EXPERIMENTAL)(*2)
       Canon PIXMA MG5250  (EXPERIMENTAL)(*2)
       Canon PIXMA MG5270  (EXPERIMENTAL)(*2)
       Canon PIXMA MG5280  (EXPERIMENTAL)(*2)

       Canon MG5300 series (EXPERIMENTAL)(*1)
       Canon PIXMA MG5310  (EXPERIMENTAL)(*2)